--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Raspberry Pi</string>
+    <string name="point">.</string>
+    <string name="connect">CONNECT</string>
+    <string name="shutdown">SHUTDOWN</string>
+    <string name="disconnect">DISCONNECT</string>
+    <string name="connect_state">Connect State</string>
+    <string name="ip">IP</string>
 </resources>
