--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Raspberry Pi</string>
     <string name="point">.</string>
-    <string name="connect">CONNECT</string>
-    <string name="shutdown">SHUTDOWN</string>
-    <string name="disconnect">DISCONNECT</string>
-    <string name="connect_state">Connect State</string>
+    <string name="connect">连接</string>
+    <string name="shutdown">关机</string>
+    <string name="disconnect">断开</string>
+    <string name="connect_state">连接状态</string>
     <string name="ip">IP</string>
+    <string name="turn_off_sensor">关闭体感</string>
+    <string name="turn_on_sensor">开启体感</string>
 </resources>
